addons/external-dns/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-traefik-by-name
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: k2s-ca-issuer
    cert-manager.io/common-name: k2s-dashboard.cluster.local
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: k2s-dashboard.cluster.local
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - k2s-dashboard.cluster.local
      secretName: k2s-dashboard-by-name-tls
